<resources>
    <string name="app_name">Comparisist</string>
    <string name="products">Products</string>
    <string name="stores">Stores</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_products">Products</string>
    <string name="add_product">Add a Product</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="brand_name">Brand</string>
    <string name="size">Size</string>
    <string name="store_name">Store</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="bulk">Bulk</string>
    <string name="quantity">Quantity</string>
    <string name="note">Note</string>
    <string name="deal">Deal</string>
    <string name="unit">Unit</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="search_title">Product, brand, and store</string>
    <string name="search_hint">Product name, brand, and store</string>
</resources>