<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".products.create.CreateProductFragment"

        >


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_image_button">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/product_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="0"
                android:hint="@string/name"
                android:padding="16dp"
                android:inputType="textAutoComplete"
                android:imeOptions="actionNext"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintWidth_percent="0.56">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/brand_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="0"
                android:hint="@string/brand_name"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout8"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintWidth_percent="0.22">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/size_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="0"
                android:hint="@string/size"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:padding="16dp"


                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/store_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="0"
                android:hint="@string/store_name"
                android:padding="16dp"
                android:inputType="textAutoComplete"
                android:imeOptions="actionNext"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout9"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

            <EditText
                android:id="@+id/price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:padding="16dp"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">

            <EditText
                android:id="@+id/date_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:padding="16dp"
                android:inputType="date"
                android:clickable="true"
                android:focusable="false"
                android:longClickable="false"
                android:imeOptions="actionNext"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/is_deal_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/deal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <EditText
                android:id="@+id/quantity_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:inputType="numberDecimal"
                android:padding="16dp"
                android:text="1"
                android:imeOptions="actionNext"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout8"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="00dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout7"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintWidth_percent="0.18">
            <!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->


            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/unit_edit_text"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="0"
                android:hint="@string/unit"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/product_image_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#F3F3F3"
            android:src="@drawable/ic_twotone_image_24"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="1"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>